# docs/swagger.json
@@ -6,16 +6,19 @@
     "paths": {
         "/api/v1/Users/login": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Users"
                 ],
-                "summary": "Register new account",
+                "summary": "User login",
                 "responses": {
                     "200": {
-                        "description": "{\"status\":200,\"data\":{\"token\":string},\"msg\":\"Login succeed\"}",
+                        "description": "{\"status\":200,\"data\":{\"token\":string},\"msg\":\"user login succeed\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -25,6 +28,9 @@
         },
         "/api/v1/Users/register": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -34,7 +40,7 @@
                 "summary": "Register new account",
                 "responses": {
                     "200": {
-                        "description": "{\"status\":200,\"data\":{},\"msg\":\"Register new user succeed\"}",
+                        "description": "{\"status\":200,\"data\":{},\"msg\":\"user register succeed\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -53,7 +59,32 @@
                 "summary": "Get all todo tasks",
                 "responses": {
                     "200": {
-                        "description": "{\"status\":200,\"data\":{\"items\":{}},\"msg\":\"Todos fetched!\"}",
+                        "description": "{\"status\":200,\"data\":{\"items\":{}},\"msg\":\"succeed\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Todo"
+                ],
+                "summary": "Update an existing todo task",
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":200,\"data\":{},\"msg\":\"todo update succeed\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -66,6 +97,9 @@
                         "ApiKeyAuth": []
                     }
                 ],
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -75,7 +109,7 @@
                 "summary": "Create new todo task",
                 "responses": {
                     "200": {
-                        "description": "{\"status\":200,\"data\":{},\"msg\":\"Successfully added new TODO item.\"}",
+                        "description": "{\"status\":200,\"data\":{},\"msg\":\"todo create succeed\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -94,29 +128,7 @@
                 "summary": "Get one todo task",
                 "responses": {
                     "200": {
-                        "description": "{\"status\":200,\"data\":{\"item\":{}},\"msg\":\"Todo found!\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Todo"
-                ],
-                "summary": "Update an existing todo task",
-                "responses": {
-                    "200": {
-                        "description": "{\"status\":200,\"data\":{},\"msg\":\"Update item successful.\"}",
+                        "description": "{\"status\":200,\"data\":{\"item\":{}},\"msg\":\"succeed\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -135,7 +147,7 @@
                 "summary": "Get all todo tasks of a specific user",
                 "responses": {
                     "200": {
-                        "description": "{\"status\":200,\"data\":{\"items\":{}},\"msg\":\"Fetch user's items succeed\"}",
+                        "description": "{\"status\":200,\"data\":{\"items\":{}},\"msg\":\"succeed\"}",
                         "schema": {
                             "type": "string"
                         }
